--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -11,8 +11,9 @@ COPY build/libs/*.jar live-feed-batch.jar
 #RUN apt-get update && \
 #    apt-get install -y wget unzip chromium-driver
 
-RUN apt-get update && apt-get install -y sudo
-RUN sudo apt-get install software-properties-common && sudo add-apt-repository universe && apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y sudo && \
+    sudo apt-get install -y software-properties-common && sudo add-apt-repository universe && \
+    apt-get update && apt-get install -y \
     chromium-browser \
     chromium-chromedriver
 
