--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -12,8 +12,8 @@ COPY build/libs/*.jar live-feed-batch.jar
 #    apt-get install -y wget unzip chromium-driver
 
 RUN apt-get update && apt-get install -y sudo && \
-    sudo apt-get install -y software-properties-common && sudo add-apt-repository universe && \
-    apt-get update && apt-get install -y \
+    sudo apt-get install -y software-properties-common && sudo add-apt-repository universe && apt-get install snapd && \
+    apt-get update && snap install chromium && apt-get install -y \
     chromium-browser \
     chromium-chromedriver
 
