--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -13,8 +13,13 @@ COPY build/libs/*.jar live-feed-batch.jar
 
 RUN apt-get update && apt-get install -y sudo && \
     sudo apt-get install -y software-properties-common snapd && \
-    sudo add-apt-repository universe && apt-get update && \
-    snap install chromium && apt-get install -y chromium-browser chromium-chromedriver
+    sudo add-apt-repository universe \
+
+RUN sudo apt-get update && sudo apt-get install -yqq daemonize dbus-user-session fontconfig \
+    sudo daemonize /usr/bin/unshare --fork --pid --mount-proc /lib/systemd/systemd --system-unit=basic.target \
+    exec sudo nsenter -t $(pidof systemd) -a su - $LOGNAME
+
+RUN apt-get update && sudo snap install chromium && apt-get install -y chromium-browser chromium-chromedriver
 
 #RUN CHROMEDRIVER_VERSION=$(wget -qO- https://chromedriver.storage.googleapis.com/LATEST_RELEASE) && \
 #    wget -O /tmp/chromedriver.zip https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip && \
