[LF-41/chromedriver] chromium snap 설치5

--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -15,8 +15,8 @@ RUN apt-get update && apt-get install -y sudo && \
     sudo apt-get install -y software-properties-common snapd && \
     sudo add-apt-repository universe
 
-RUN sudo apt-get update && sudo apt-get install -yqq daemonize dbus-user-session fontconfig \
-    sudo daemonize /usr/bin/unshare --fork --pid --mount-proc /lib/systemd/systemd --system-unit=basic.target \
+RUN sudo apt-get update && sudo apt-get install -yqq daemonize dbus-user-session fontconfig && \
+    sudo daemonize /usr/bin/unshare --fork --pid --mount-proc /lib/systemd/systemd --system-unit=basic.target && \
     exec sudo nsenter -t $(pidof systemd) -a su - $LOGNAME
 
 RUN apt-get update && sudo snap install chromium && apt-get install -y chromium-browser chromium-chromedriver
