[LF-41/chromedriver] firefox-geckodriver 변경2

--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -10,21 +10,9 @@ COPY build/libs/*.jar live-feed-batch.jar
 
 RUN apt-get update && apt-get install -y sudo && \
     sudo apt-get install -y software-properties-common && \
-    sudo add-apt-repository universe ppa:mozillateam/ppa \
-
-RUN echo ' \
-    Package: * \
-    Pin: release o=LP-PPA-mozillateam \
-    Pin-Priority: 1001 \
-    \
-    Package: firefox \
-    Pin: version 1:1snap1-0ubuntu2 \
-    Pin-Priority: -1 \
-    ' | sudo tee /etc/apt/preferences.d/mozilla-firefox
+    sudo add-apt-repository security \
 
 RUN sudo apt-get update && sudo apt-get install -y firefox firefox-geckodriver
-
-RUN echo 'Unattended-Upgrade::Allowed-Origins:: "LP-PPA-mozillateam:${distro_codename}";' | sudo tee /etc/apt/apt.conf.d/51unattended-upgrades-firefox
 
 RUN cp /usr/bin/geckodriver /usr/local/bin/
 
