[LF-41/chromedriver] chromedriver hostPath 설정

--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:17-focal
+FROM eclipse-temurin:17-jammy
 
 WORKDIR /app
 
@@ -7,5 +7,8 @@ ENV active_profile=prod
 RUN chmod a+x /app
 
 COPY build/libs/*.jar live-feed-batch.jar
+
+RUN apt-get update && \
+    apt-get install -y libatomic1
 
 ENTRYPOINT ["java", "-jar", "/app/live-feed-batch.jar", "--spring.profiles.active=${active_profile}"]
