[LF-41/chromedriver] cd 테스트 30

--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -14,9 +14,9 @@ FROM oraclelinux:8.9
 RUN yum update -y && yum install -y curl tar gzip
 
 # OpenJDK 17 다운로드 및 설치
-RUN curl -O https://download.java.net/java/early_access/alpine/11/binaries/openjdk-17-ea+11_linux-aarch64_bin.tar.gz \
-    && tar -zxvf openjdk-17-ea+11_linux-aarch64_bin.tar.gz -C /opt \
-    && rm openjdk-17-ea+11_linux-aarch64_bin.tar.gz
+RUN wget https://download.java.net/java/early_access/alpine/11/binaries/openjdk-17-ea+11_linux-aarch64_bin.tar.gz
+RUN tar -zxvf openjdk-17-ea+11_linux-aarch64_bin.tar.gz -C /opt
+RUN rm openjdk-17-ea+11_linux-aarch64_bin.tar.gz
 
 # 환경 변수 설정
 ENV JAVA_HOME=/opt/jdk-17
