[LF-41/chromedriver] cd 테스트 31

--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -11,7 +11,7 @@ FROM oraclelinux:8.9
 #    dnf clean all
 
 # 시스템 업데이트 및 필요한 패키지 설치
-RUN yum update -y && yum install -y curl tar gzip wget
+RUN yum install -y tar gzip wget
 
 # OpenJDK 17 다운로드 및 설치
 RUN wget https://download.java.net/java/GA/jdk17.0.2/dfd4a8d0985749f896bed50d7138ee7f/8/GPL/openjdk-17.0.2_linux-aarch64_bin.tar.gz
@@ -28,11 +28,11 @@ CMD ["java", "-version"]
 #RUN source /etc/profile.d/jdk.sh
 #
 #RUN java --version
-#
-#WORKDIR /app
-#
-#RUN chmod a+x /app
-#
-#COPY build/libs/*.jar live-feed-batch.jar
-#
-#ENTRYPOINT ["java", "-jar", "/app/live-feed-batch.jar", "--spring.profiles.active=${active_profile}"]
+
+WORKDIR /app
+
+RUN chmod a+x /app
+
+COPY build/libs/*.jar live-feed-batch.jar
+
+ENTRYPOINT ["java", "-jar", "/app/live-feed-batch.jar", "--spring.profiles.active=${active_profile}"]
