[LF-41/chromedriver] cd 테스트 31

--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -90,5 +90,5 @@ jobs:
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.APP_VERSION }}
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           platforms: |
-            linux/amd64
+#            linux/amd64
             linux/arm64
