--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -31,7 +31,7 @@ ENV active_profile=prod
 #RUN java --version
 
 WORKDIR /app
-RUN export LD_LIBRARY_PATH=/app/usr/bin:$LD_LIBRARY_PATH
+RUN export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:/app/usr/bin
 
 RUN chmod a+x /app
 
