--- a/LiveFeedBatch/Dockerfile-backup
+++ b/LiveFeedBatch/Dockerfile-backup
@@ -1,4 +1,4 @@
-FROM seleniarm/standalone-chromium
+FROM oraclelinux:8.9
 
 
 
@@ -32,7 +32,7 @@ ENV active_profile=prod
 
 WORKDIR /app
 
-#ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/app/usr/bin
+ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/app/usr/bin
 
 RUN chmod a+x /app
 
