[LF-41/chromedriver] cd 테스트 37

--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -14,9 +14,9 @@ FROM seleniarm/standalone-chromium
 #RUN apt-get install -y tar gzip wget
 
 # OpenJDK 17 다운로드 및 설치
-RUN wget https://download.java.net/java/GA/jdk17.0.2/dfd4a8d0985749f896bed50d7138ee7f/8/GPL/openjdk-17.0.2_linux-aarch64_bin.tar.gz && \
-    tar -zxvf openjdk-17.0.2_linux-aarch64_bin.tar.gz -C /opt && \
-    rm openjdk-17.0.2_linux-aarch64_bin.tar.gz
+RUN wget https://download.java.net/java/GA/jdk17.0.2/dfd4a8d0985749f896bed50d7138ee7f/8/GPL/openjdk-17.0.2_linux-aarch64_bin.tar.gz
+RUN sudo tar -zxvf openjdk-17.0.2_linux-aarch64_bin.tar.gz -C /opt
+#RUN rm openjdk-17.0.2_linux-aarch64_bin.tar.gz
 
 # 환경 변수 설정
 ENV JAVA_HOME=/opt/jdk-17.0.2
