[LF-41/chromedriver] chromedriver dockerfile 설치

--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -1,7 +1,5 @@
 FROM oraclelinux:8.9
 
-
-
 #ENV JAVA_VERSION=17 \
 #    JAVA_HOME=/usr/lib/jvm/java-${JAVA_VERSION}-openjdk \
 #    PATH=${JAVA_HOME}/bin:${PATH} \
@@ -30,9 +28,18 @@ ENV active_profile=prod
 #
 #RUN java --version
 
+RUN wget https://rpmfind.net/linux/epel/8/Everything/aarch64/Packages/n/nss-mdns-0.14.1-9.el8.aarch64.rpm && \
+    wget https://rpmfind.net/linux/epel/testing/8/Everything/aarch64/Packages/c/chromium-common-120.0.6099.216-1.el8.aarch64.rpm && \
+    wget https://rpmfind.net/linux/epel/testing/8/Everything/aarch64/Packages/c/chromedriver-120.0.6099.216-1.el8.aarch64.rpm && \
+    wget https://rpmfind.net/linux/openmandriva/cooker/repository/aarch64/main/release/chromium-browser-120.0.6099.216-1-omv2490.aarch64.rpm && \
+    sudo localinstall nss-mdns-0.14.1-9.el8.aarch64.rpm && \
+    sudo localinstall chromium-common-120.0.6099.216-1.el8.aarch64.rpm && \
+    sudo localinstall chromedriver-120.0.6099.216-1.el8.aarch64.rpm && \
+    sudo localinstall chromium-browser-120.0.6099.216-1-omv2490.aarch64.rpm
+
 WORKDIR /app
 
-ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/app/usr/bin
+#ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/app/usr/bin
 
 RUN chmod a+x /app
 
