[LF-41/chromedriver] chromedriver dockerfile 설치2

--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -28,7 +28,8 @@ ENV active_profile=prod
 #
 #RUN java --version
 
-RUN wget https://rpmfind.net/linux/epel/8/Everything/aarch64/Packages/n/nss-mdns-0.14.1-9.el8.aarch64.rpm && \
+RUN dnf install -y sudo && \
+    wget https://rpmfind.net/linux/epel/8/Everything/aarch64/Packages/n/nss-mdns-0.14.1-9.el8.aarch64.rpm && \
     wget https://rpmfind.net/linux/epel/testing/8/Everything/aarch64/Packages/c/chromium-common-120.0.6099.216-1.el8.aarch64.rpm && \
     wget https://rpmfind.net/linux/epel/testing/8/Everything/aarch64/Packages/c/chromedriver-120.0.6099.216-1.el8.aarch64.rpm && \
     wget https://rpmfind.net/linux/openmandriva/cooker/repository/aarch64/main/release/chromium-browser-120.0.6099.216-1-omv2490.aarch64.rpm && \
