[LF-41/chromedriver] chromedriver dockerfile 설치6

--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -9,7 +9,8 @@ FROM oraclelinux:8.9
 #    dnf clean all
 
 # 시스템 업데이트 및 필요한 패키지 설치
-RUN yum install -y tar gzip wget
+#RUN yum install -y tar gzip wget
+RUN dnf install -y wget
 
 # OpenJDK 17 다운로드 및 설치
 #RUN wget https://download.java.net/java/GA/jdk17.0.2/dfd4a8d0985749f896bed50d7138ee7f/8/GPL/openjdk-17.0.2_linux-aarch64_bin.tar.gz && \
@@ -28,7 +29,7 @@ ENV active_profile=prod
 #
 #RUN java --version
 
-RUN dnf install -y sudo libminizip && \
+RUN dnf install -y sudo libminizip1.aarch64 && \
     wget https://rpmfind.net/linux/epel/8/Everything/aarch64/Packages/n/nss-mdns-0.14.1-9.el8.aarch64.rpm && \
     wget https://rpmfind.net/linux/epel/testing/8/Everything/aarch64/Packages/c/chromium-common-120.0.6099.216-1.el8.aarch64.rpm && \
     wget https://rpmfind.net/linux/epel/testing/8/Everything/aarch64/Packages/c/chromedriver-120.0.6099.216-1.el8.aarch64.rpm && \
