--- a/LiveFeedBatch/Dockerfile
+++ b/LiveFeedBatch/Dockerfile
@@ -9,28 +9,25 @@ RUN yum install -y tar gzip wget && \
 # 환경 변수 설정
 ENV JAVA_HOME=/opt/jdk-17.0.2 \
     PATH=$PATH:$JAVA_HOME/bin \
-#    TZ=Asia/Seoul \
+    TZ=Asia/Seoul \
     active_profile=prod
 
 # 시간대 설정
-#RUN dnf install -y tzdata && \
-#    ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && \
-#    echo $TZ > /etc/timezone
+RUN dnf install -y tzdata && \
+    ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && \
+    echo $TZ > /etc/timezone
 
 # 크롬 관련 패키지 설치
-#RUN wget https://rpmfind.net/linux/opensuse/ports/aarch64/tumbleweed/repo/oss/aarch64/libminizip1-1.3-1.1.aarch64.rpm && \
-#    wget https://rpmfind.net/linux/epel/8/Everything/aarch64/Packages/n/nss-mdns-0.14.1-9.el8.aarch64.rpm && \
-#    wget https://rpmfind.net/linux/epel/testing/8/Everything/aarch64/Packages/c/chromium-common-120.0.6099.224-1.el8.aarch64.rpm && \
-#    wget https://rpmfind.net/linux/epel/testing/8/Everything/aarch64/Packages/c/chromedriver-120.0.6099.224-1.el8.aarch64.rpm && \
-#    wget https://rpmfind.net/linux/epel/testing/8/Everything/aarch64/Packages/c/chromium-120.0.6099.224-1.el8.aarch64.rpm && \
-#    dnf localinstall libminizip1-1.3-1.1.aarch64.rpm && \
-#    dnf localinstall nss-mdns-0.14.1-9.el8.aarch64.rpm && \
-#    dnf localinstall chromium-common-120.0.6099.224-1.el8.aarch64.rpm && \
-#    dnf localinstall chromedriver-120.0.6099.224-1.el8.aarch64.rpm && \
-#    dnf localinstall chromium-120.0.6099.224-1.el8.aarch64.rpm
-
-RUN wget https://rpmfind.net/linux/opensuse/ports/aarch64/tumbleweed/repo/oss/aarch64/libminizip1-1.3-1.1.aarch64.rpm
-RUN dnf localinstall libminizip1-1.3-1.1.aarch64.rpm
+RUN wget https://rpmfind.net/linux/opensuse/ports/aarch64/tumbleweed/repo/oss/aarch64/libminizip1-1.3-1.1.aarch64.rpm && \
+    wget https://rpmfind.net/linux/epel/8/Everything/aarch64/Packages/n/nss-mdns-0.14.1-9.el8.aarch64.rpm && \
+    wget https://rpmfind.net/linux/epel/testing/8/Everything/aarch64/Packages/c/chromium-common-120.0.6099.224-1.el8.aarch64.rpm && \
+    wget https://rpmfind.net/linux/epel/testing/8/Everything/aarch64/Packages/c/chromedriver-120.0.6099.224-1.el8.aarch64.rpm && \
+    wget https://rpmfind.net/linux/epel/testing/8/Everything/aarch64/Packages/c/chromium-120.0.6099.224-1.el8.aarch64.rpm && \
+    dnf localinstall libminizip1-1.3-1.1.aarch64.rpm && \
+    dnf localinstall nss-mdns-0.14.1-9.el8.aarch64.rpm && \
+    dnf localinstall chromium-common-120.0.6099.224-1.el8.aarch64.rpm && \
+    dnf localinstall chromedriver-120.0.6099.224-1.el8.aarch64.rpm && \
+    dnf localinstall chromium-120.0.6099.224-1.el8.aarch64.rpm
 
 WORKDIR /app
 
