[LF-42/quartz-cluster] spring batch 쿼츠 스케줄러를 이용해 클러스터 구성 완료

--- a/LiveFeedBatch/src/main/resources/application-prod.yaml
+++ b/LiveFeedBatch/src/main/resources/application-prod.yaml
@@ -15,6 +15,20 @@ spring:
       password: ${BATCH_DATABASE_PASSWORD}
       driver-class-name: com.mysql.cj.jdbc.Driver
 
+  quartz:
+    job-store-type: jdbc
+    jdbc:
+      initialize-schema: always
+    properties:
+      org:
+        quartz:
+          scheduler:
+            instanceName: ${QUARTZ_INSTANCE_NAME}
+            instanceId: ${QUARTZ_INSTANCE_ID}
+          jobStore:
+            isClustered: true
+            clusterCheckinInterval: 20000
+
   data:
     redis:
       repositories:
