--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,29 +53,17 @@ services:
       KAFKA_CLUSTERS_0_NAME: kafka
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
       KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
-  
-#  opensearch:
-#    image: opensearchproject/opensearch:latest
-#    container_name: opensearch
-#    ports:
-#      - "9200:9200"
-#      - "9300:9300"
-#    environment:
-#      TZ: Asia/Seoul
-#      discovery.type: single-node
-#      http.publish_host: localhost
-##      plugin.security.disabled: true
-#
-#  opensearch-dashboards:
-#    image: opensearchproject/opensearch-dashboards:latest
-#    container_name: opensearch-dashboards
-#    ports:
-#      - "5601:5601"
-#    expose:
-#      - "5601"
-#    environment:
-#      OPENSEARCH_HOSTS: '["https://opensearch:9200"]'
-#      TZ: Asia/Seoul
+
+  fluent-bit:
+    image: fluent/fluent-bit
+    container_name: fluent-bit
+    environment:
+      TZ: Asia/Seoul
+    volumes:
+      - ./config/fluent-bit.conf:/fluent-bit/etc/fluent-bit.conf
+      - ./logs/service-module:/var/log/spring_service_log:ro
+    depends_on:
+      - elasticsearch
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.10.4
@@ -88,7 +76,6 @@ services:
       node.name: single-node
       cluster.name: el-singlenode-c
       discovery.type: single-node
-#      http.publish_host: localhost
       ES_JAVA_OPTS: "-Xms1g -Xmx1g"
 
   kibana:
