[LF-47/app-monitor] fluent-bit 로그 수집 적용 진행 중
- 파일을 못 읽음...

--- a/config/fluent-bit.conf
+++ b/config/fluent-bit.conf
@@ -1,17 +1,27 @@
 [SERVICE]
-    Flush        1
-    Daemon       Off
-    Log_Level    info
+    Flush     1
+    Daemon    off
+    Log_Level trace
 
 [INPUT]
-    Name         tail
-    Path         /var/log/spring_service_log/*.log
-    Tag          springboot-app-log
+    Name  tail
+    Path  /var/log/spring_batch_log/*.log
+    Tag  *
+    Refresh_Interval  10
+    multiline.parser  java
+    Skip_Empty_Lines  On
+    Read_from_Head  false
+    Inotify_Watcher  false
 
 [OUTPUT]
-    Name         es
-    Match        *
-    Host         elasticsearch
-    Port         9200
-    Index        springboot_logs
-    Type         _doc
+    Name  stdout
+    Match *
+
+# [OUTPUT]
+#     Name  es
+#     Match  *
+#     Host  elasticsearch
+#     Port  9200
+#     Index  spring_service_log
+#     Type  _doc
+#     Logstash_Format On
