--- a/LiveFeedBatch/Dockerfile-base
+++ b/LiveFeedBatch/Dockerfile-base
@@ -29,5 +29,5 @@ RUN wget https://rpmfind.net/linux/opensuse/ports/aarch64/tumbleweed/repo/oss/aa
     dnf localinstall chromedriver-120.0.6099.224-1.el8.aarch64.rpm && \
     dnf localinstall chromium-120.0.6099.224-1.el8.aarch64.rpm
 
-# nslookup 설치
-RUN dnf install -y bind-utils
+# nslookup, telnet 설치
+RUN dnf install -y bind-utils telnet
