[LF-47/app-monitor] fluent-bit 로그 수집 적용 진행 중2
- 파일을 못 읽음...

--- a/config/fluent-bit.conf
+++ b/config/fluent-bit.conf
@@ -1,17 +1,21 @@
 [SERVICE]
     Flush     1
     Daemon    off
-    Log_Level trace
+    Log_Level  trace
+    Parsers_File /opt/bitnami/fluent-bit/conf/parsers_java.conf
 
 [INPUT]
     Name  tail
-    Path  /var/log/spring_batch_log/*.log
-    Tag  *
+    Path  /var/log/spring_service_log/*.log
+    Tag  spring_service
     Refresh_Interval  10
+    Multiline  On
     multiline.parser  java
+#     Parser_Firstline  parsers_java.conf
+    Parser_Firstline  java_multiline
     Skip_Empty_Lines  On
     Read_from_Head  false
-    Inotify_Watcher  false
+#     Inotify_Watcher  false
 
 [OUTPUT]
     Name  stdout
