[LF-47/app-monitor] prometheus pushgateway 적용 진행 중
- service 모듈 적용 완료
- batch 모듈에 pushgateway 적용 필요

--- a/.github/workflows/service-actions.yml
+++ b/.github/workflows/service-actions.yml
@@ -38,7 +38,7 @@ jobs:
 #        run: ./gradlew :LiveFeedService:test
 
   build:
-#    if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     environment: service
 
