--- a/LiveFeedBatch/build.gradle
+++ b/LiveFeedBatch/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'io.prometheus:simpleclient_pushgateway'
 
     testImplementation 'org.springframework.batch:spring-batch-test'
     testImplementation 'com.h2database:h2'
