--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,10 +60,7 @@ services:
     environment:
       TZ: Asia/Seoul
     volumes:
-      - ./config/fluent-bit.conf:/opt/bitnami/fluent-bit/conf/fluent-bit.conf
-#      - ./config/parsers.conf:/opt/bitnami/fluent-bit/conf/parsers.conf
-      - ./logs/service-module:/var/log/spring_service_log
-#      - ./logs/batch-module:/var/log/spring_batch_log:ro
+      - ./config/fluent-bit/fluent-bit.conf:/opt/bitnami/fluent-bit/conf/fluent-bit.conf
     depends_on:
       - elasticsearch
 
@@ -102,3 +99,29 @@ services:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
     restart: always
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./config/prometheus:/etc/prometheus
+    ports:
+      - "9090:9090"
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.enable-lifecycle'
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    depends_on:
+      - prometheus
+    ports:
+      - "3000:3000"
+
+  pushgateway:
+    image: prom/pushgateway:v1.4.0
+    container_name: pushgateway
+    ports:
+      - "9091:9091"
