[LF-48/chromedriver-rpm] chromedriver rpm 출처 변경

--- a/LiveFeedBatch/Dockerfile-base
+++ b/LiveFeedBatch/Dockerfile-base
@@ -18,12 +18,14 @@ RUN dnf install -y tzdata && \
     echo $TZ > /etc/timezone
 
 # 크롬 관련 패키지 설치
-RUN wget https://rpmfind.net/linux/opensuse/ports/aarch64/tumbleweed/repo/oss/aarch64/libminizip1-1.3-1.1.aarch64.rpm && \
-    wget https://rpmfind.net/linux/epel/8/Everything/aarch64/Packages/n/nss-mdns-0.14.1-9.el8.aarch64.rpm && \
-    wget https://rpmfind.net/linux/epel/8/Everything/aarch64/Packages/c/chromium-common-120.0.6099.224-1.el8.aarch64.rpm && \
-    wget https://rpmfind.net/linux/epel/8/Everything/aarch64/Packages/c/chromedriver-120.0.6099.224-1.el8.aarch64.rpm && \
-    wget https://rpmfind.net/linux/epel/8/Everything/aarch64/Packages/c/chromium-120.0.6099.224-1.el8.aarch64.rpm && \
-    dnf localinstall libminizip1-1.3-1.1.aarch64.rpm && \
+RUN wget https://kojipkgs.fedoraproject.org//packages/zlib/1.2.13/5.eln134/aarch64/zlib-1.2.13-5.eln134.aarch64.rpm && \
+    wget https://kojipkgs.fedoraproject.org//packages/zlib/1.2.13/5.eln134/aarch64/minizip-compat-1.2.13-5.eln134.aarch64.rpm && \
+    wget https://kojipkgs.fedoraproject.org//packages/nss-mdns/0.14.1/9.el8/aarch64/nss-mdns-0.14.1-9.el8.aarch64.rpm && \
+    wget https://kojipkgs.fedoraproject.org//packages/chromium/120.0.6099.224/1.el8/aarch64/chromium-common-120.0.6099.224-1.el8.aarch64.rpm && \
+    wget https://kojipkgs.fedoraproject.org//packages/chromium/120.0.6099.224/1.el8/aarch64/chromedriver-120.0.6099.224-1.el8.aarch64.rpm && \
+    wget https://kojipkgs.fedoraproject.org//packages/chromium/120.0.6099.224/1.el8/aarch64/chromium-120.0.6099.224-1.el8.aarch64.rpm && \
+    dnf localinstall zlib-1.2.13-5.eln134.aarch64.rpm && \
+    dnf localinstall minizip-compat-1.2.13-5.eln134.aarch64.rpm && \
     dnf localinstall nss-mdns-0.14.1-9.el8.aarch64.rpm && \
     dnf localinstall chromium-common-120.0.6099.224-1.el8.aarch64.rpm && \
     dnf localinstall chromedriver-120.0.6099.224-1.el8.aarch64.rpm && \
