[LF-47/app-monitor] prometheus 설정
- push gateway는 이후 추가 필요
- fluent-bit, prometheus 설정파일은 일단 두겠습니다

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,8 +120,8 @@ services:
     ports:
       - "3000:3000"
 
-  pushgateway:
-    image: prom/pushgateway:v1.4.0
-    container_name: pushgateway
-    ports:
-      - "9091:9091"
+#  pushgateway:
+#    image: prom/pushgateway:v1.4.0
+#    container_name: pushgateway
+#    ports:
+#      - "9091:9091"
