[LF-52/deploy] service module 배포 작업
- actuator 포트 변경

--- a/LiveFeedService/build.gradle
+++ b/LiveFeedService/build.gradle
@@ -7,7 +7,7 @@ configurations {
     asciidoctorExt
 }
 
-version = '0.1.2'
+version = '0.1.3-stage'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
