--- a/.github/workflows/service-actions.yml
+++ b/.github/workflows/service-actions.yml
@@ -11,34 +11,34 @@ on:
   push:
     paths:
       - 'LiveFeedService/**'
-#  pull_request:
-#    types: [opened, reopened, closed]
-#    branches:
-#      - 'main'
-#    paths:
-#      - 'LiveFeedService/**'
+  pull_request:
+    types: [opened, reopened, closed]
+    branches:
+      - 'main'
+    paths:
+      - 'LiveFeedService/**'
 
 jobs:
-#  test:
-#    if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
-#    runs-on: ubuntu-latest
-#    environment: service
-#
-#    steps:
-#      - name: Checkout branch
-#        uses: actions/checkout@v3.5.2
-#
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v3.11.0
-#        with:
-#          distribution: 'zulu'
-#          java-version: '17'
-#
-#      - name: Gradle Test
-#        run: ./gradlew :LiveFeedService:test
+  test:
+    if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
+    runs-on: ubuntu-latest
+    environment: service
+
+    steps:
+      - name: Checkout branch
+        uses: actions/checkout@v3.5.2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3.11.0
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+
+      - name: Gradle Test
+        run: ./gradlew :LiveFeedService:test
 
   build:
-#    if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     environment: service
 
