--- a/LiveFeedService/build.gradle
+++ b/LiveFeedService/build.gradle
@@ -7,7 +7,7 @@ configurations {
     asciidoctorExt
 }
 
-version = '0.1.3-stage'
+version = '0.2.0'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
