--- a/LiveFeedBatch/build.gradle
+++ b/LiveFeedBatch/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java-library'
 }
 
-version = '0.2.5'
+version = '0.2.6'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
@@ -12,6 +12,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'io.prometheus:simpleclient_pushgateway'
+    implementation 'com.oracle.database.jdbc:ojdbc11-production:21.1.0.0'
 
     testImplementation 'org.springframework.batch:spring-batch-test'
     testImplementation 'com.h2database:h2'
