--- a/LiveFeedBatch/build.gradle
+++ b/LiveFeedBatch/build.gradle
@@ -12,7 +12,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'io.prometheus:simpleclient_pushgateway'
-    implementation 'com.oracle.database.jdbc:ojdbc11-production:21.1.0.0'
+    implementation ('com.oracle.database.jdbc:ojdbc11-production:21.1.0.0') {
+        exclude group: 'com.oracle.ojdbc', module: 'simplefan'
+        exclude group: 'com.oracle.ojdbc', module: 'ons'
+    }
 
     testImplementation 'org.springframework.batch:spring-batch-test'
     testImplementation 'com.h2database:h2'
