--- a/LiveFeedBatch/build.gradle
+++ b/LiveFeedBatch/build.gradle
@@ -7,14 +7,14 @@ version = '0.2.6'
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.seleniumhq.selenium:selenium-java:4.17.0'
-    implementation 'mysql:mysql-connector-java:8.0.33'
+//    implementation 'mysql:mysql-connector-java:8.0.33'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'io.prometheus:simpleclient_pushgateway'
     implementation ('com.oracle.database.jdbc:ojdbc11-production:21.1.0.0') {
-        exclude group: 'com.oracle.ojdbc', module: 'simplefan'
-        exclude group: 'com.oracle.ojdbc', module: 'ons'
+        exclude group: 'com.oracle.database.ha', module: 'simplefan'
+        exclude group: 'com.oracle.database.ha', module: 'ons'
     }
 
     testImplementation 'org.springframework.batch:spring-batch-test'
