[LF-52/deploy] api service 어플리케이션 배포 (#40)
* [LF-52/deploy] service module 배포 작업

- actuator 포트 변경

* [LF-52/deploy] allow-origin 환경변수로 변경

* [LF-52/deploy] github actions 파일 수정

* [LF-52/deploy] oracledb 사용할 수 있도록 docker-compose 파일 수정

--- a/LiveFeedService/src/main/resources/application-prod.yaml
+++ b/LiveFeedService/src/main/resources/application-prod.yaml
@@ -19,11 +19,13 @@ spring:
         format_sql: true
 
 management:
+  server:
+    port: ${ACTUATOR_EXPOSURE_PORT}
   endpoints:
     web:
       exposure:
-        include: ${PROMETHEUS_EXPOSURE_INCLUDE}
-        exclude: ${PROMETHEUS_EXPOSURE_EXCLUDE}
+        include: ${ACTUATOR_EXPOSURE_INCLUDE}
+        exclude: ${ACTUATOR_EXPOSURE_EXCLUDE}
 
 elasticsearch:
   config:
@@ -33,3 +35,6 @@ elasticsearch:
 
 server:
   port: ${APPLICATION_PORT}
+
+application:
+  allow-origin: ${ALLOW_ORIGIN}
