--- a/LiveFeedService/src/main/resources/application-prod.yaml
+++ b/LiveFeedService/src/main/resources/application-prod.yaml
@@ -6,17 +6,17 @@ spring:
     url: ${APP_DATABASE_URL}
     username: ${APP_DATABASE_USER}
     password: ${APP_DATABASE_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: oracle.jdbc.OracleDriver
 
   jpa:
     hibernate:
       ddl-auto: none
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQLDialect
+    database: oracle
+    database-platform: org.hibernate.dialect.OracleDialect
     properties:
       hibernate:
-        show_sql: true
-        format_sql: true
+        show_sql: false
+        format_sql: false
 
 management:
   endpoints:
