[LF-53/oracle-db] git actions 테스트

--- a/.github/workflows/service-actions.yml
+++ b/.github/workflows/service-actions.yml
@@ -19,7 +19,7 @@ on:
 #      - 'LiveFeedService/**'
 
 jobs:
-  test:
+#  test:
 #    if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
 #    runs-on: ubuntu-latest
 #    environment: service
