--- a/LiveFeedService/build.gradle
+++ b/LiveFeedService/build.gradle
@@ -20,6 +20,8 @@ dependencies {
         exclude group: 'com.oracle.database.ha', module: 'simplefan'
         exclude group: 'com.oracle.database.ha', module: 'ons'
     }
+    
+    runtimeOnly 'com.h2database:h2'
 
     testImplementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
 
