[LF-53/oracle-db] Oracle DB 이관 (#41)
* [LF-53/oracle-db] batch 어플리케이션 oracle jdbc driver 변경

* [LF-53/oracle-db] simplefan, ons 의존성 제거

* [LF-53/oracle-db] simplefan, ons 의존성 제거 그룹명 변경

* [LF-53/oracle-db] service 어플리케이션 oracle jdbc driver 변경

* [LF-53/oracle-db] git actions 테스트

* [LF-53/oracle-db] git actions 테스트

* [LF-53/oracle-db] 불필요한 의존성 제거

* [LF-53/oracle-db] 의존성 추가

* [LF-53/oracle-db] git actions 원복

--- a/LiveFeedService/build.gradle
+++ b/LiveFeedService/build.gradle
@@ -7,7 +7,7 @@ configurations {
     asciidoctorExt
 }
 
-version = '0.2.0'
+version = '0.2.1'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -16,8 +16,11 @@ dependencies {
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
     implementation 'org.jsoup:jsoup:1.16.2'
-
-    runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation ('com.oracle.database.jdbc:ojdbc11-production:21.1.0.0') {
+        exclude group: 'com.oracle.database.ha', module: 'simplefan'
+        exclude group: 'com.oracle.database.ha', module: 'ons'
+    }
+    
     runtimeOnly 'com.h2database:h2'
 
     testImplementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
