[LF-57/cd-arc] ARC 테스트

--- a/.github/workflows/arc-actions.yml
+++ b/.github/workflows/arc-actions.yml
@@ -1,6 +1,9 @@
 name: Actions Runner Controller
 on:
-  workflow_dispatch:
+  workflow_dispatch: {}
+  push:
+    branches:
+      - 'LF-57/cd-arc'
 
 jobs:
   Explore-GitHub-Actions:
