--- a/.github/workflows/arc-actions.yml
+++ b/.github/workflows/arc-actions.yml
@@ -6,7 +6,16 @@ on:
       - 'LF-57/cd-arc'
 
 jobs:
-  Explore-GitHub-Actions:
+  deploy:
     runs-on: arc-runner-set
     steps:
-      - run: echo "This job uses runner scale set runners!"
+      - name: Extract version variable
+        run: |
+          echo "APP_VERSION=$(./gradlew :LiveFeedBatch:properties -q | grep version | awk -F ' ' '{ print $2 }')" >> $GITHUB_ENV
+
+      - name: Rolling update
+        run: kubectl set image cronjob/batch-cron-job batch-container=ghcr.io/live-feed/live-feed-batch:${{ env.APP_VERSION }}
+
+      - name: Create cron job
+        if: ${{ failure() }}
+        run: kubectl apply -f /home/opc/k3s/application/batch/jobs/batch-cron-job.yaml
