--- a/.github/workflows/arc-actions.yml
+++ b/.github/workflows/arc-actions.yml
@@ -13,6 +13,9 @@ jobs:
         run: |
           echo "APP_VERSION=$(./gradlew :LiveFeedBatch:properties -q | grep version | awk -F ' ' '{ print $2 }')" >> $GITHUB_ENV
 
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
+
       - name: Rolling update
         run: kubectl set image cronjob/batch-cron-job batch-container=ghcr.io/live-feed/live-feed-batch:${{ env.APP_VERSION }}
 
