--- a/.github/workflows/arc-actions.yml
+++ b/.github/workflows/arc-actions.yml
@@ -9,6 +9,15 @@ jobs:
   deploy:
     runs-on: arc-runner-set
     steps:
+      - name: Checkout branch
+        uses: actions/checkout@v3.5.2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3.11.0
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+
       - name: Extract version variable
         run: |
           echo "APP_VERSION=$(./gradlew :LiveFeedBatch:properties -q | grep version | awk -F ' ' '{ print $2 }')" >> $GITHUB_ENV
@@ -18,7 +27,3 @@ jobs:
 
       - name: Rolling update
         run: kubectl set image cronjob/batch-cron-job batch-container=ghcr.io/live-feed/live-feed-batch:${{ env.APP_VERSION }}
-
-      - name: Create cron job
-        if: ${{ failure() }}
-        run: kubectl apply -f /home/opc/k3s/application/batch/jobs/batch-cron-job.yaml
