--- a/.github/workflows/service-actions.yml
+++ b/.github/workflows/service-actions.yml
@@ -104,4 +104,4 @@ jobs:
         uses: azure/setup-kubectl@v3
 
       - name: Rolling update
-        run: kubectl set image deployment/service-app service-app=ghcr.io/live-feed/live-feed-service:${{ env.APP_VERSION }} -n application
+        run: kubectl set image deployment/service-app service-app=ghcr.io/live-feed/live-feed-service:$APP_VERSION -n application
