[LF-61/cors] cors 설정 코드 수정

--- a/LiveFeedService/src/main/resources/application-prod.yaml
+++ b/LiveFeedService/src/main/resources/application-prod.yaml
@@ -39,7 +39,7 @@ server:
   port: ${APPLICATION_PORT}
 
 application:
-  allow-origin: ${ALLOW_ORIGIN}
+  allow-origins: ${ALLOW_ORIGINS}
 
 decorator:
   datasource:
