[LF-64/sse] redis pub/sub 채널 이름 환경변수로 변경

--- a/LiveFeedService/src/main/resources/application-prod.yaml
+++ b/LiveFeedService/src/main/resources/application-prod.yaml
@@ -27,6 +27,9 @@ spring:
       repositories:
         enabled: false
 
+  redis-pub-sub:
+    channel: ${REDIS_PUB_SUB_CHANNEL}
+
 management:
   server:
     port: ${ACTUATOR_EXPOSURE_PORT}
