[LF-64/sse] 서비스 모듈 Server Sent Event 연결 (#49)
* [LF-64/sse] redis pub/sub , server sent event 테스트

* [LF-64/sse] redis pub/sub , server sent event 구현 완료

* [LF-64/sse] redis pub/sub 채널 이름 환경변수로 변경

--- a/LiveFeedService/src/main/resources/application-prod.yaml
+++ b/LiveFeedService/src/main/resources/application-prod.yaml
@@ -20,6 +20,16 @@ spring:
         show_sql: false
         format_sql: false
 
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+      repositories:
+        enabled: false
+
+  redis-pub-sub:
+    channel: ${REDIS_PUB_SUB_CHANNEL}
+
 management:
   server:
     port: ${ACTUATOR_EXPOSURE_PORT}
